--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.checkbox.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.checkbox.cshtml
@@ -1,11 +1,9 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.CheckboxField>
-<div class="form-group @(Model.Invalid? "has-error" : null)">
-  <div class="checkbox">
-    <label>
-      <input type="checkbox" name="@Model.FormSafeName" ng-model="formData.@Model.FormSafeName" value="true" @(Model.Mandatory ? "required" : null) />
-      @Model.Label
-    </label>
-  </div>
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid? "has-error" : null) checkbox">
+  <label>
+    <input type="checkbox" name="@Model.FormSafeName" ng-model="formData.@Model.FormSafeName" value="true" @(Model.Mandatory ? "required" : null) />
+    @Model.Label
+  </label>
 
   @Html.Partial("FormEditor/FieldsAsync/core.utils.helptext")
   @Html.Partial("FormEditor/FieldsAsync/core.utils.validationerror")
