--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.checkboxgroup.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsAsync/core.checkboxgroup.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.CheckboxGroupField>
-<div class="form-group @(Model.Invalid ? "has-error" : null)" name="@Model.FormSafeName" ng-model="@Model.FormSafeName">
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)" name="@Model.FormSafeName" ng-model="@Model.FormSafeName">
   <label>@Model.Label</label>
   @foreach (var fieldValue in Model.FieldValues)
   {
