--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.date.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.date.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.DateField>
-<div class="form-group @(Model.Invalid ? "has-error" : null)">
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)">
   <label for="@Model.FormSafeName">@Model.Label</label>
   <input type="date" class="form-control" id="@Model.FormSafeName" name="@Model.FormSafeName" value="@Model.SubmittedValue" @(Model.Mandatory ? "required" : null) />
 
