--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.number.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.number.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.NumberField>
-<div class="form-group @(Model.Invalid ? "has-error" : null)">
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)">
   <label for="@Model.FormSafeName">@Model.Label</label>
   <input type="number" class="form-control" id="@Model.FormSafeName" name="@Model.FormSafeName" placeholder="@Model.Placeholder" value="@Model.SubmittedValue" min="@Model.Min" max="@Model.Max" @(Model.Mandatory ? "required" : null) />
 
