--- a/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.radiobuttongroup.cshtml
+++ b/Source/Umbraco/Views/Partials/FormEditor/FieldsSync/core.radiobuttongroup.cshtml
@@ -1,5 +1,5 @@
 @inherits Umbraco.Web.Mvc.UmbracoViewPage<FormEditor.Fields.RadioButtonGroupField>
-<div class="form-group @(Model.Invalid ? "has-error" : null)">
+<div class="form-group @(Model.Mandatory ? "required" : null) @(Model.Invalid ? "has-error" : null)">
   <label>@Model.Label</label>
   @foreach (var fieldValue in Model.FieldValues)
   {
